--- a/keep_distance_back/src/main/resources/application.properties
+++ b/keep_distance_back/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/keep_distance_db
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=1010
+spring.datasource.hikari.connection-test-query=SELECT 1
